Adding the starter theme and normalize submodule
Signed-off-by: Jesse Beach <splendidnoise@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/basic/plugins/normalize"]
 	path = themes/basic/plugins/normalize
 	url = https://github.com/necolas/normalize.css.git
+[submodule "themes/starter/plugins/normalize"]
+	path = themes/starter/plugins/normalize
+	url = https://github.com/necolas/normalize.css.git
