--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "themes/cornflower/plugins/modernizr"]
 	path = themes/cornflower/plugins/modernizr
 	url = https://github.com/Modernizr/Modernizr.git
+[submodule "jquery/jquery-plugin-template"]
+	path = jquery/jquery-plugin-template
+	url = git@github.com:jessebeach/jQuery-Plugin-Template.git
